# axiom

./: .gitignore  README.md  axiom_mcp.py  pyproject.toml  requirements.txt
axiom/: __init__.py  agent.py  evolution.py
axiom/core/: drift.py  identity.py  memory.py
axiom/epistemic/: belief.py
axiom/guardian/: constraint.py
axiom/trust/: peer.py
examples/: basic_agent.py  multi_agent_trust.py
